--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "betabot",
   "version": "1.0.0",
-  "description": "Discord bot",
+  "description": "A Discord bot. Still in Beta.",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
@@ -11,12 +11,12 @@
   "dependencies": {
     "child_process": "^1.0.2",
     "discord.js": "^13.3.1",
-    "fs": "0.0.1-security",
+    "firebase-admin": "^10.0.0",
     "node-emoji": "^1.10.0",
-    "pg": "^8.2.1",
     "uuid": "^8.3.2"
   },
-  "engines":{
+  "engines": {
     "node": "17.0.1"
-  }
+  },
+  "type": "module"
 }
