--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "JJCooley",
   "license": "ISC",
   "dependencies": {
+    "@types/node-emoji": "^1.8.1",
     "child_process": "^1.0.2",
     "discord.js": "^13.3.1",
     "firebase-admin": "^10.0.0",
