--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "JJCooley",
   "license": "ISC",
   "dependencies": {
+    "@types/json2csv": "^5.0.3",
     "@types/node-emoji": "^1.8.1",
     "child_process": "^1.0.2",
     "discord.js": "^13.3.1",
     "firebase-admin": "^10.0.0",
+    "json2csv": "^5.0.6",
     "node-emoji": "^1.10.0"
   },
   "engines": {
