--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "JJCooley",
   "license": "ISC",
   "dependencies": {
-    "ts-node": "^3.3.0",
     "@discordjs/rest": "^0.1.0-canary.0",
     "@types/cron": "^1.7.3",
     "@types/json2csv": "^5.0.3",
@@ -20,7 +19,9 @@
     "discord.js": "^13.3.1",
     "firebase-admin": "^10.0.0",
     "json2csv": "^5.0.6",
-    "node-emoji": "^1.10.0"
+    "node-emoji": "^1.10.0",
+    "ts-node": "10.4.0",
+    "typescript": "4.5.4"
   },
   "engines": {
     "node": "17.0.1"
