--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "json2csv": "^5.0.6",
     "luxon": "^2.2.0",
     "node-emoji": "^1.10.0",
+    "short-unique-id": "^4.4.4",
     "ts-node": "10.4.0",
     "typescript": "4.5.4"
   },
