--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es2021",
     "esModuleInterop": true,
+    "moduleResolution": "node"
   }
 }
