--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "json2csv": "^5.0.6",
     "luxon": "^2.2.0",
     "node-emoji": "^1.10.0",
+    "node-fetch": "^3.3.2",
     "short-unique-id": "^4.4.4",
     "tsx": "^4.16.2",
     "typescript": "4.5.4"
