--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "@types/node-emoji": "^1.8.1",
     "child_process": "^1.0.2",
     "cron": "^1.8.2",
+    "discord-emoji-converter": "^1.2.10",
     "discord.js": "14.7.1",
     "firebase-admin": "^10.0.0",
     "json2csv": "^5.0.6",
     "luxon": "^2.2.0",
-    "node-emoji": "^1.10.0",
     "node-fetch": "^3.3.2",
     "short-unique-id": "^4.4.4",
     "tsx": "^4.16.2",
