--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "json2csv": "^5.0.6",
     "luxon": "^2.2.0",
     "node-fetch": "^3.3.2",
+    "papaparse": "^5.4.1",
     "short-unique-id": "^4.4.4",
     "tsx": "^4.16.2",
     "typescript": "4.5.4"
   },
   "engines": {
     "node": "17.0.1"
+  },
+  "devDependencies": {
+    "@types/papaparse": "^5.3.15"
   }
 }
