--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,11 @@
     "target": "es2021",
     "esModuleInterop": true,
     "moduleResolution": "node",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "outDir": "dist",
+    "sourceMap": true
+  },
+  "tsc-alias": {
+    "resolveFullPaths": true
   }
 }
